Bug 1939076: fixing styling for link-expand-right buttons
As seen in view access edit page and admin -> people search page

where the chevron was not aligned with the text

(cherry picked from commit 1edc49e9494b2fb9a5a54f57a8625ba7c6ad4e91)

--- a/htdocs/theme/raw/sass/components/_indicator.scss
+++ b/htdocs/theme/raw/sass/components/_indicator.scss
@@ -32,7 +32,6 @@
     }
     // advanced options collapsible
     .link-expand-right & {
-        margin-top: 0;
         padding-left: $spacing-sm;
         padding-right: $spacing-sm;
     }
